--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,11 @@ dependencies:
     sdk: flutter
   infinite_scroll_pagination: ^3.1.0
   http: ^0.13.4
+  flutter_fadein: ^2.0.0
   shimmer_image: ^0.0.2
   provider: ^6.0.2
+  geolocator: ^8.0.3
+  shared_preferences: ^2.0.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
