--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Beermonopoly</string>
+	<string>Ølmonopolet</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -24,6 +24,10 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Ølmonopolet trenger tilgang til din lokasjon for å beregne avstand til de ulike Vinmonopolene.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Ølmonopolet trenger tilgang til din lokasjon for å beregne avstand til de ulike Vinmonopolene.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -43,9 +47,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Ølmonopolet trenger tilgang til din lokasjon for å beregne avstand til de ulike Vinmonopolene.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Ølmonopolet trenger tilgang til din lokasjon for å beregne avstand til de ulike Vinmonopolene.</string>
 </dict>
 </plist>
