--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   provider: ^6.0.2
   geolocator: ^8.0.3
   shared_preferences: ^2.0.12
+  flutter_web_auth: ^0.4.0
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,7 +68,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/placeholder.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/logo_transparent.png
+    - assets/images/untappd_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
