--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_web_auth: ^0.4.0
   intl: ^0.17.0
   rotated_corner_decoration: ^2.0.0
+  sqflite: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
