--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   rotated_corner_decoration: ^2.0.0
   sqflite: ^2.0.2
+  url_launcher: ^6.0.18
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
