--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   rotated_corner_decoration: ^2.0.0
   sqflite: ^2.0.2
   url_launcher: ^6.0.18
+  multiselect: ^0.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
