--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/images/placeholder.png
     - assets/images/logo_transparent.png
     - assets/images/untappd_logo.png
+    - assets/images/powered_by_untappd.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
