--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.0.18
   multiselect: ^0.0.4
   adaptive_theme: ^2.3.0
+  rate_my_app: ^1.1.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
