--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+50
+version: 1.2.0+52
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_messaging: ^11.2.8
   flutter_local_notifications: ^9.3.3
+  firebase_analytics: ^9.1.2
 
 dev_dependencies:
   flutter_test:
