--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,49 +4,51 @@ publish_to: "none"
 version: 2.2.4+145
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  infinite_scroll_pagination: ^4.0.0
-  http: ^1.1.0
-  flutter_fadein: ^2.0.0
-  fancy_shimmer_image: ^2.0.2
-  provider: ^6.0.2
-  geolocator: ^12.0.0
-  shared_preferences: ^2.0.12
-  flutter_web_auth: ^0.5.0
-  intl: ^0.19.0
-  rotated_corner_decoration: ^2.0.0
-  sqflite: ^2.0.2
-  url_launcher: ^6.0.18
   adaptive_theme: ^3.1.1
-  rate_my_app: ^2.0.0
-  percent_indicator: ^4.2.3
-  external_app_launcher: ^4.0.0
-  flag: ^7.0.0
-  dropdown_search: ^5.0.2
   cached_network_image: ^3.2.3
-  persistent_bottom_nav_bar_v2: ^5.0.0-beta.6
-  retry: ^3.1.0
-  equatable: ^2.0.0
+  cronet_http: ^1.3.2
+  cupertino_http: ^1.5.1
   cupertino_icons: ^1.0.2
+  dropdown_search: ^5.0.2
+  equatable: ^2.0.0
+  external_app_launcher: ^4.0.0
+  fancy_shimmer_image: ^2.0.2
+  fetch_client: ^1.1.2
+  flag: ^7.0.0
+  firebase_analytics: ^11.0.0
   firebase_core: ^3.1.1
   firebase_messaging: ^15.0.2
-  flutter_local_notifications: ^17.0.0
-  firebase_analytics: ^11.0.0
-  fetch_client: ^1.1.2
-  cupertino_http: ^1.5.1
-  cronet_http: ^1.3.2
+  flutter:
+    sdk: flutter
+  flutter_fadein: ^2.0.0
+  flutter_local_notifications: ^19.3.0
+  flutter_web_auth: ^0.5.0
+  geolocator: ^14.0.0
+  http: ^1.1.0
+  infinite_scroll_pagination: ^4.0.0
+  intl: ^0.19.0
+  percent_indicator: ^4.2.3
+  persistent_bottom_nav_bar_v2: ^5.0.0-beta.6
+  provider: ^6.0.2
+  rate_my_app: ^2.0.0
+  retry: ^3.1.0
+  rotated_corner_decoration: ^2.0.0
+  shared_preferences: ^2.0.12
+  sqflite: ^2.0.2
+  url_launcher: ^6.0.18
 
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   integration_test:
     sdk: flutter
   mocktail: ^1.0.1
+  flutter_lints: ^1.0.0
 
 flutter_icons:
   android: "launcher_icon"
@@ -55,7 +57,6 @@ flutter_icons:
   adaptive_icon_background: "#FFA100"
   adaptive_icon_foreground: "dev_assets/icon/icon_adaptive.png"
   remove_alpha_ios: true
-  flutter_lints: ^1.0.0
 
 flutter:
   uses-material-design: true
