--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   flutter_fadein: ^2.0.0
   flutter_local_notifications: ^19.3.0
-  flutter_web_auth: ^0.5.0
+  flutter_web_auth_2: ^4.1.0
   geolocator: ^14.0.0
   http: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
