--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .buildlog/
 .history
 .svn/
+**/key.jks
 
 # IntelliJ related
 *.iml
@@ -101,6 +102,7 @@ unlinked_spec.ds
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/vendor/
 
 # macOS
 **/macos/Flutter/GeneratedPluginRegistrant.swift
@@ -128,6 +130,7 @@ android/app/google-services.json
 firebase.json
 **/firebase_options.dart
 **/firebase_app_id_file.json
+google_service_account.json
 
 # Google Maps API
 google_maps_api.xml
@@ -864,4 +867,8 @@ Temporary Items
 
 # Archives         - https://github.com/github/gitignore/blob/main/Global/Archives.gitignore
 # Backup           - https://github.com/github/gitignore/blob/main/Global/Backup.gitignore
-# JEnv             - https://github.com/github/gitignore/blob/main/Global/JEnv.gitignore
+# JEnv             - https://github.com/github/gitignore/blob/main/Global/JEnv.gitignoregoogle_service_account.json
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
