--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,18 +11,18 @@ dependencies:
   adaptive_theme: ^3.1.1
   cached_network_image: ^3.2.3
   cronet_http: ^1.3.2
-  cupertino_http: ^1.5.1
+  cupertino_http: ^2.4.0
   cupertino_icons: ^1.0.2
-  dropdown_search: ^5.0.2
+  dropdown_search: ^6.0.2
   equatable: ^2.0.0
   external_app_launcher: ^4.0.0
   fancy_shimmer_image: ^2.0.2
   fetch_client: ^1.1.2
   flag: ^7.0.0
-  firebase_analytics: ^11.0.0
-  firebase_core: ^3.1.1
-  flutter_dotenv: ^5.1.0
-  firebase_messaging: ^15.0.2
+  firebase_analytics: ^12.0.4
+  firebase_core: ^4.2.1
+  flutter_dotenv: ^6.0.0
+  firebase_messaging: ^16.0.4
   flutter:
     sdk: flutter
   flutter_fadein: ^2.0.0
@@ -30,9 +30,9 @@ dependencies:
   geolocator: ^14.0.0
   http: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
-  intl: ^0.19.0
+  intl: ^0.20.0
   percent_indicator: ^4.2.3
-  persistent_bottom_nav_bar_v2: ^5.0.0-beta.6
+  persistent_bottom_nav_bar_v2: ^6.2.0
   provider: ^6.0.2
   rate_my_app: ^2.0.0
   retry: ^3.1.0
@@ -48,7 +48,7 @@ dev_dependencies:
   # integration_test:
   # sdk: flutter
   mocktail: ^1.0.1
-  flutter_lints: ^1.0.0
+  flutter_lints: ^6.0.0
 
 flutter_icons:
   android: "launcher_icon"
@@ -62,7 +62,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/placeholder.png
-    - assets/images/default_avatar.png
-    - assets/images/logo_transparent.png
-    - .env
+  - assets/images/placeholder.png
+  - assets/images/default_avatar.png
+  - assets/images/logo_transparent.png
+  - .env
