--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   flutter_fadein: ^2.0.0
   flutter_local_notifications: ^19.3.0
   geolocator: ^14.0.0
+  go_router: ^17.0.0
   http: ^1.1.0
   infinite_scroll_pagination: ^5.1.1
   intl: ^0.20.0
-  persistent_bottom_nav_bar_v2: ^6.2.0
   provider: ^6.0.2
   rate_my_app: ^2.0.0
   retry: ^3.1.0
