--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,14 @@ dependencies:
   fancy_shimmer_image: ^2.0.2
   fetch_client: ^1.1.2
   flag: ^7.0.0
+  crypto: ^3.0.6
   firebase_analytics: ^12.0.4
+  firebase_auth: ^6.1.4
   firebase_core: ^4.2.1
   flutter_dotenv: ^6.0.0
   firebase_messaging: ^16.0.4
+  google_sign_in: ^6.3.0
+  sign_in_with_apple: ^6.1.4
   flutter:
     sdk: flutter
   flutter_fadein: ^2.0.0
