--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   url_launcher: ^6.0.18
   path: ^1.9.1
   flutter_screenutil: ^5.9.3
+  share_plus: ^12.0.1
+  animated_reorderable_list: ^1.3.0
 
 dev_dependencies:
   flutter_test:
