--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -77,6 +77,8 @@
 		<true/>
 		<key>ITSAppUsesNonExemptEncryption</key>
 		<false/>
+		<key>FlutterDeepLinkingEnabled</key>
+		<true/>
 		<key>UIApplicationSceneManifest</key>
 		<dict>
 			<key>UIApplicationSupportsMultipleScenes</key>
