--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # API endpoints
 API_BASE_URL=https://api.example.com/
+APP_BASE_URL=https://example.com
 
 # Facebook URLs and IDs
 FACEBOOK_URL=https://www.facebook.com/example
