--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_analytics: ^12.0.4
   firebase_auth: ^6.1.4
   firebase_core: ^4.2.1
+  app_badge_plus: ^1.2.7
   flutter_dotenv: ^6.0.0
   firebase_messaging: ^16.0.4
   google_sign_in: ^6.3.0
